fix: absent goods

--- a/src/index.html
+++ b/src/index.html
@@ -86,10 +86,10 @@
                 <div class="absent-goods__content-wrapper">
                   <img class="absent-goods__photo" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
                   <div class="absent-goods__text-wrapper">
-                    <h3 class="section__text">Футболка UZcotton мужская</h3>
+                    <h3 class="section__text section__text_absent-goods">Футболка UZcotton мужская</h3>
                     <div class="absent-goods__description">
-                      <span class="section__subtext">Цвет: белый</span>
-                      <span class="section__subtext">Размер: 56</span>
+                      <span class="section__subtext section__subtext_grey">Цвет: белый</span>
+                      <span class="section__subtext section__subtext_grey">Размер: 56</span>
                     </div>
                   </div>
                 </div>
@@ -100,12 +100,11 @@
               </li>
               <li class="absent-goods__item">
                 <div class="absent-goods__content-wrapper">
-                  <img class="absent-goods__photo" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
+                  <img class="absent-goods__photo" src="<%=require('./images/cardholder.jpg')%>" alt="Футболка UZcotton мужская" />
                   <div class="absent-goods__text-wrapper">
-                    <h3 class="section__text">Футболка UZcotton мужская</h3>
+                    <h3 class="section__text section__text_absent-goods">Силиконовый чехол картхолдер (отверстия) для карт, прозрачный кейс бампер на Apple iPhone XR, MobiSafe</h3>
                     <div class="absent-goods__description">
-                      <span class="section__subtext">Цвет: белый</span>
-                      <span class="section__subtext">Размер: 56</span>
+                      <span class="section__subtext section__subtext_grey">Цвет: прозрачный</span>
                     </div>
                   </div>
                 </div>
@@ -116,10 +115,10 @@
               </li>
               <li class="absent-goods__item">
                 <div class="absent-goods__content-wrapper">
-                  <img class="absent-goods__photo" src="<%=require('./images/tshirt_UZcotton.png')%>" alt="Футболка UZcotton мужская" />
+                  <img class="absent-goods__photo" src="<%=require('./images/faber_castell.jpg')%>" alt="Футболка UZcotton мужская" />
                   <div class="absent-goods__text-wrapper">
-                    <h3 class="section__text">Футболка UZcotton мужская</h3>
-                    <div class="absent-goods__description">
+                    <h3 class="section__text section__text_absent-goods">Карандаши цветные Faber-Castell "Замок", набор 24 цвета, заточенные, шестигранные, Faber-Castell</h3>
+                    <div class="absent-goods__description absent-goods__description_hidden">
                       <span class="section__subtext">Цвет: белый</span>
                       <span class="section__subtext">Размер: 56</span>
                     </div>
@@ -195,7 +194,7 @@
                 <span class="section__text">1234 56•• •••• 1234</span>
                 <span class="section__text section__subtext_padding-left-4">01/30</span>
               </div>
-              <p class="section__subtext section__subtext_grey">Спишем оплату с карты при получении</p>
+              <p class="section__subtext section__subtext_grey section__subtext_margin-top-8">Спишем оплату с карты при получении</p>
             </div>
           </section>
           <section class="recipient info-block info-block_gap-16 info-block_recipient content__section section">
