feat: info-tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -213,8 +213,8 @@
                   </div>
                 </div>
                 <div class="absent-goods__button-wrapper">
-                  <button class="like-button button"></button>
-                  <button class="delete-button button"></button>
+                  <button class="like-button"></button>
+                  <button class="delete-button"></button>
                 </div>
               </li>
               <li class="absent-goods__item">
@@ -228,8 +228,8 @@
                   </div>
                 </div>
                 <div class="absent-goods__button-wrapper">
-                  <button class="like-button button"></button>
-                  <button class="delete-button button"></button>
+                  <button class="like-button"></button>
+                  <button class="delete-button"></button>
                 </div>
               </li>
               <li class="absent-goods__item">
@@ -244,8 +244,8 @@
                   </div>
                 </div>
                 <div class="absent-goods__button-wrapper">
-                  <button class="like-button button"></button>
-                  <button class="delete-button button"></button>
+                  <button class="like-button"></button>
+                  <button class="delete-button"></button>
                 </div>
               </li>
             </ul>
@@ -461,6 +461,24 @@
     <footer class="footer section page__footer">
       <p class="footer__copyright">&#169;&nbsp;2022&nbsp;&nbsp;ООО «Товары и точка»</p>
     </footer>
+  </div>
+  <div class="info-tooltip info-tooltip_hidden">
+    <h3 class="section__subtext section__subtext_bold">OOO «МЕГАПРОФСТИЛЬ»</h3>
+    <p class="section__subtext">ОГРН: 5167746237148</p>
+    <p class="section__subtext">129337, Москва, улица Красная Сосна, 2, корпус 1, стр. 1, помещение 2, офис 34</p>
+  </div>
+  <div class="info-tooltip info-tooltip_free-return info-tooltip_hidden">
+    <p class="section__subtext">Если товары вам не подойдут, мы вернем их обратно на склад — это бесплатно</p>
+  </div>
+  <div class="info-tooltip info-tooltip_discount">
+    <div class="info-tooltip__row">
+      <p class="section__subtext section__subtext_grey">Скидка 55%</p>
+      <p class="section__subtext">−300 сом</p>
+    </div>
+    <div class="info-tooltip__row">
+      <p class="section__subtext section__subtext_grey">Скидка покупателя 10%</p>
+      <p class="section__subtext">−30 сом</p>
+    </div>
   </div>
 </body>
 </html>
