--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
         <button class="header__mobile-search button"></button>
       </div>
     </header>
+
     <main class="main page__content">
       <div class="main__container content">
         <div class="content__column">
@@ -307,9 +308,9 @@
                 <button class="change-button button">Изменить</button>
               </div>
               <div class="payment-method__content-wrapper">
-                <div class="credit-card-number">
-                  <div class="credit-card-number__card-icon-background">
-                    <img class="credit-card-number__card-icon" src="<%=require('./images/mir.svg')%>" alt="Банковская карта Мир" />
+                <div class="payment-method__card-number">
+                  <div class="credit-card-icon">
+                    <img class="credit-card-icon__mir-img" src="<%=require('./images/mir.svg')%>" alt="Банковская карта Мир" />
                   </div>
                   <span class="section__text">1234 56•• •••• 1234</span>
                   <span class="section__text section__subtext_padding-left-4">01/30</span>
@@ -430,9 +431,9 @@
                 <h3 class="section__subtitle">Оплата картой</h3>
                 <button class="order-summary__edit-button button"></button>
               </div>
-              <div class="credit-card-number">
-                <div class="credit-card-number__card-icon-background">
-                  <img class="credit-card-number__card-icon" src="<%=require('./images/mir.svg')%>" alt="Банковская карта Мир" />
+              <div class="order-summary__card-number">
+                <div class="credit-card-icon">
+                  <img class="credit-card-icon__mir-img" src="<%=require('./images/mir.svg')%>" alt="Банковская карта Мир" />
                 </div>
                 <p class="section__subtext">1234 12•• •••• 1234</p>
               </div>
@@ -458,19 +459,23 @@
         </aside>
       </div>
     </main>
+
     <footer class="footer section page__footer">
       <p class="footer__copyright">&#169;&nbsp;2022&nbsp;&nbsp;ООО «Товары и точка»</p>
     </footer>
   </div>
+
   <div class="info-tooltip info-tooltip_hidden">
     <h3 class="section__subtext section__subtext_bold">OOO «МЕГАПРОФСТИЛЬ»</h3>
     <p class="section__subtext">ОГРН: 5167746237148</p>
     <p class="section__subtext">129337, Москва, улица Красная Сосна, 2, корпус 1, стр. 1, помещение 2, офис 34</p>
   </div>
+
   <div class="info-tooltip info-tooltip_free-return info-tooltip_hidden">
     <p class="section__subtext">Если товары вам не подойдут, мы вернем их обратно на склад — это бесплатно</p>
   </div>
-  <div class="info-tooltip info-tooltip_discount">
+
+  <div class="info-tooltip info-tooltip_discount info-tooltip_hidden">
     <div class="info-tooltip__row">
       <p class="section__subtext section__subtext_grey">Скидка 55%</p>
       <p class="section__subtext">−300 сом</p>
@@ -478,6 +483,109 @@
     <div class="info-tooltip__row">
       <p class="section__subtext section__subtext_grey">Скидка покупателя 10%</p>
       <p class="section__subtext">−30 сом</p>
+    </div>
+  </div>
+
+  <div class="popup popup_type_payment-method">
+    <div class="popup__container">
+      <button class="popup__close-button button" type="button"></button>
+      <h2 class="popup__title">Способ оплаты</h2>
+      <form class="popup__form">
+        <div class="popup__radio">
+          <div class="radio-button">
+            <input class="radio-button__input" type="radio" id="mir" name="credit-card" value="MIR">
+            <span class="radio-button__span"></span>
+          </div>
+          <div class="popup__card">
+            <div class="credit-card-icon">
+              <img class="credit-card-icon__mir-img" src="<%=require('./images/mir.svg')%>" alt="Банковская карта Мир" />
+            </div>
+            <label class="section__text" for="mir">1234 56•• •••• 1234</label><br>
+          </div>
+        </div>
+        <div class="popup__radio">
+          <div class="radio-button">
+            <input class="radio-button__input" type="radio" id="visa" name="credit-card" value="VISA">
+            <span class="radio-button__span"></span>
+          </div>
+          <div class="popup__card">
+            <div class="credit-card-icon">
+              <img class="credit-card-icon__visa-img" src="<%=require('./images/visa.svg')%>" alt="Банковская карта Мир" />
+            </div>
+            <label class="section__text" for="visa">1234 56•• •••• 1234</label><br>
+          </div>
+        </div>
+        <div class="popup__radio">
+          <div class="radio-button">
+            <input class="radio-button__input" type="radio" id="mastercard" name="credit-card" value="MasterCard">
+            <span class="radio-button__span"></span>
+          </div>
+          <div class="popup__card">
+            <div class="credit-card-icon">
+              <img class="credit-card-icon__mastercard-img" src="<%=require('./images/mastercard.svg')%>" alt="Банковская карта Мир" />
+            </div>
+            <label class="section__text" for="mastercard">1234 56•• •••• 1234</label><br>
+          </div>
+        </div>
+        <div class="popup__radio">
+          <div class="radio-button">
+            <input class="radio-button__input" type="radio" id="maestro" name="credit-card" value="Maestro">
+            <span class="radio-button__span"></span>
+          </div>
+          <div class="popup__card">
+            <div class="credit-card-icon">
+              <img class="credit-card-icon__maestro-img" src="<%=require('./images/maestro.svg')%>" alt="Банковская карта Мир" />
+            </div>
+            <label class="section__text" for="maestro">1234 56•• •••• 1234</label><br>
+          </div>
+        </div>
+      </form>
+      <button class="submit-button submit-button_payment-popup button" type="button">Выбрать</button>
+    </div>
+  </div>
+
+  <div class="popup popup_type_delivery-method popup_opened">
+    <div class="popup__container popup__container_delivery-method">
+      <button class="popup__close-button button" type="button"></button>
+      <h2 class="popup__title">Способ доставки</h2>
+      <div class="popup__toggle-wrapper">
+        <button class="popup__toggle-button button" type="button">В пункт выдачи</button>
+        <button class="popup__toggle-button popup__toggle-button_active button" type="button">Курьером</button>
+      </div>
+      <h3 class="section__subtext section__subtext_bold">Мои адреса</h3>
+      <form class="popup__form popup__form_delivery">
+        <div class="popup__form-row">
+          <div class="popup__address-wrapper">
+            <div class="radio-button">
+              <input class="radio-button__input" type="radio" id="address1" name="addresses" value="address1">
+              <span class="radio-button__span"></span>
+            </div>
+            <label class="section__text" for="address1">Бишкек, улица Табышалиева, 57</label>
+          </div>
+          <button class="delete-button"></button>
+        </div>
+        <div class="popup__form-row">
+          <div class="popup__address-wrapper">
+            <div class="radio-button">
+              <input class="radio-button__input" type="radio" id="address2" name="addresses" value="address2">
+              <span class="radio-button__span"></span>
+            </div>
+            <label class="section__text" for="address2">Бишкек, улица Жукеева-Пудовкина, 77/1</label>
+          </div>
+          <button class="delete-button"></button>
+        </div>
+        <div class="popup__form-row">
+          <div class="popup__address-wrapper">
+            <div class="radio-button">
+              <input class="radio-button__input" type="radio" id="address3" name="addresses" value="address3">
+              <span class="radio-button__span"></span>
+            </div>
+            <label class="section__text" for="address3">Бишкек, микрорайон Джал, улица Ахунбаева Исы, 67/1</label>
+          </div>
+          <button class="delete-button"></button>
+        </div>
+      </form>
+      <button class="submit-button submit-button_delivery-popup button">Выбрать</button>
     </div>
   </div>
 </body>
