--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,7 @@
             </section>
             <section class="recipient info-block info-block_gap-16 info-block_recipient content__section section">
               <h2 class="section__title">Получатель</h2>
-              <form class="recipient__form">
+              <form class="recipient__form" name="recipientData" novalidate>
                 <div class="recipient__form-row">
                   <div class="recipient__input-wrapper">
                     <label class="recipient__label" for="recipientName">Имя</label>
@@ -218,6 +218,7 @@
                       aria-label="Имя"
                       required
                       min="2">
+                    <span id="recipientName-error" class="recipient__error-message"></span>
                   </div>
                   <div class="recipient__input-wrapper">
                     <label class="recipient__label" for="recipientLastName">Фамилия</label>
@@ -230,6 +231,7 @@
                       aria-label="Фамилия"
                       required
                       min="2">
+                    <span id="recipientLastName-error" class="recipient__error-message"></span>
                   </div>
                 </div>
                 <div class="recipient__form-row recipient__form-row_second">
@@ -243,6 +245,7 @@
                       placeholder="Почта"
                       aria-label="Почта"
                       required>
+                    <span id="recipientEmail-error" class="recipient__error-message"></span>
                   </div>
                   <div class="recipient__input-wrapper">
                     <label class="recipient__label" for="recipientPhoneNumber">Телефон</label>
@@ -256,6 +259,7 @@
                       required
                       min="11"
                       max="30">
+                    <span id="recipientPhoneNumber-error" class="recipient__error-message"></span>
                   </div>
                   <div class="recipient__input-wrapper">
                     <label class="recipient__label" for="recipientINN">ИНН</label>
@@ -269,6 +273,7 @@
                       required
                       size="14">
                     <span class="section__subtext section__subtext_recipient">Для таможенного оформления</span>
+                    <span id="recipientINN-error" class="recipient__error-message"></span>
                   </div>
                 </div>
               </form>
