--- a/src/index.html
+++ b/src/index.html
@@ -217,7 +217,7 @@
                       placeholder="Имя"
                       aria-label="Имя"
                       required
-                      min="2">
+                      minlength="2">
                     <span id="recipientName-error" class="recipient__error-message"></span>
                   </div>
                   <div class="recipient__input-wrapper">
@@ -230,7 +230,7 @@
                       placeholder="Фамилия"
                       aria-label="Фамилия"
                       required
-                      min="2">
+                      minlength="2">
                     <span id="recipientLastName-error" class="recipient__error-message"></span>
                   </div>
                 </div>
@@ -257,8 +257,8 @@
                       placeholder="Телефон"
                       aria-label="Телефон"
                       required
-                      min="11"
-                      max="30">
+                      pattern="^\+\d{1,2} \d{3} \d{3} \d{2} \d{2}$"
+                      maxlength="30">
                     <span id="recipientPhoneNumber-error" class="recipient__error-message"></span>
                   </div>
                   <div class="recipient__input-wrapper">
@@ -271,7 +271,8 @@
                       placeholder="ИНН"
                       aria-label="ИНН"
                       required
-                      size="14">
+                      size="14"
+                      pattern="\d{14}">
                     <span class="section__subtext section__subtext_recipient">Для таможенного оформления</span>
                     <span id="recipientINN-error" class="recipient__error-message"></span>
                   </div>
