feat: DeliveryPopup, PaymentPopup added

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
             <section class="delivery-method info-block info-block_gap-16 content__section section">
               <div class="info-block__title-wrapper">
                 <h2 class="section__title">Способ доставки</h2>
-                <button class="change-button button">Изменить</button>
+                <button class="change-button button" id="editDeliveryButton">Изменить</button>
               </div>
               <div class="delivery-method__content">
                 <div class="delivery-method__row">
@@ -140,7 +140,7 @@
             <section class="payment-method info-block info-block_gap-16 content__section section">
               <div class="info-block__title-wrapper">
                 <h2 class="section__title">Способ оплаты</h2>
-                <button class="change-button button">Изменить</button>
+                <button class="change-button button" id="editPaymentButton">Изменить</button>
               </div>
               <div class="payment-method__content-wrapper">
                 <div class="payment-method__card-number">
