--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,10 @@
             <section class="absent-goods content__section section">
               <div class="absent-goods__title-wrapper">
                 <h2 class="section__subtitle section__subtitle_semibold">Отсутствуют &#183; 3 товара</h2>
-                <button class="dropdown__button button"></button>
+                <button class="dropdown__button button" id="dropdownButton2"></button>
               </div>
-              <div class="divider-line divider-line_cart-contents"></div>
-              <ul class="cart-items-list cart-items-list_missing-goods"></ul>
+              <div class="divider-line divider-line_cart-contents" id="dividerLine2"></div>
+              <ul class="cart-items-list cart-items-list_missing-goods" id="dropdownContent2"></ul>
             </section>
           </div>
           <div class="content__section-wrapper">
