--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="header__container">
         <div class="header__logo-wrapper">
           <button class="burger-menu button"></button>
-          <a href="/">
+          <a href="#">
             <picture>
               <source
                 srcset="<%=require('./images/logo_mobile.svg')%>"
@@ -37,14 +37,14 @@
         <nav class="header__nav">
           <ul class="header__nav-container">
             <li class="header__nav-item">
-              <a href="/" class="header__nav-link">
+              <a href="#" class="header__nav-link">
                 <img class="header__nav-icon" src="<%=require('./images/profile_icon.svg')%>" alt="Иконка профиля"/>
                 <span class="header__nav-span">Профиль</span>
               </a>
             </li>
             <li class="header__nav-item">
               <span class="item-count-badge item-count-badge_header">3</span>
-              <a href="/" class="header__nav-link">
+              <a href="#" class="header__nav-link">
                 <img class="header__nav-icon header__nav-icon_cart" src="<%=require('./images/cart_icon.svg')%>" alt="Иконка корзины"/>
                 <span class="header__nav-span">Корзина</span>
               </a>
@@ -70,7 +70,7 @@
                   </div>
                   <label class="section__text" for="selectAllGoods">Выбрать все</label>
                 </div>
-                <button class="dropdown__button button" id="dropdownButton1"></button>
+                <button class="dropdown__button button" id="btnDropdown1"></button>
               </div>
               <div class="divider-line divider-line_cart-contents"></div>
               <ul class="cart-items-list cart-contents__list" id="dropdownContent1"></ul>
@@ -78,7 +78,7 @@
             <section class="absent-goods content__section section">
               <div class="absent-goods__title-wrapper">
                 <h2 class="section__subtitle section__subtitle_semibold">Отсутствуют &#183; 3 товара</h2>
-                <button class="dropdown__button button" id="dropdownButton2"></button>
+                <button class="dropdown__button button" id="btnDropdown2"></button>
               </div>
               <div class="divider-line divider-line_cart-contents" id="dividerLine2"></div>
               <ul class="cart-items-list cart-items-list_missing-goods" id="dropdownContent2"></ul>
@@ -88,7 +88,7 @@
             <section class="delivery-method info-block info-block_gap-16 content__section section">
               <div class="info-block__title-wrapper">
                 <h2 class="section__title">Способ доставки</h2>
-                <button class="change-button button" id="editDeliveryButton">Изменить</button>
+                <button class="change-button button" id="btnEditDeliveryText">Изменить</button>
               </div>
               <div class="delivery-method__content">
                 <div class="delivery-method__row">
@@ -140,7 +140,7 @@
             <section class="payment-method info-block info-block_gap-16 content__section section">
               <div class="info-block__title-wrapper">
                 <h2 class="section__title">Способ оплаты</h2>
-                <button class="change-button button" id="editPaymentButton">Изменить</button>
+                <button class="change-button button" id="btnEditPaymentText">Изменить</button>
               </div>
               <div class="payment-method__content-wrapper">
                 <div class="payment-method__card-number">
@@ -254,7 +254,7 @@
             <div class="order-summary__address-text-wrapper">
               <div class="order-summary__subtitle-wrapper">
                 <h3 class="section__subtitle">Доставка в пункт выдачи</h3>
-                <button class="order-summary__edit-button button"></button>
+                <button class="order-summary__edit-button button" id="btnEditDeliveryIcon"></button>
               </div>
               <p class="section__subtext">Бишкек, улица Ахматбека Суюмбаева, 12/1</p>
               <p class="section__subtext section__subtext_purple">5–8 фев</p>
@@ -270,7 +270,7 @@
             <div class="order-summary__text-wrapper">
               <div class="order-summary__subtitle-wrapper">
                 <h3 class="section__subtitle">Оплата картой</h3>
-                <button class="order-summary__edit-button button"></button>
+                <button class="order-summary__edit-button button" id="btnEditPaymentIcon"></button>
               </div>
               <div class="order-summary__card-number">
                 <div class="credit-card-icon">
@@ -294,7 +294,7 @@
             <button class="submit-button submit-button_order-summary button">Заказать</button>
             <div class="order-summary__terms-of-use-container">
               <img src="<%=require('./images/terms_of_use_icon.svg')%>" />
-              <span class="section__subtext">Соглашаюсь <a href="/" class="section__subtext section__subtext_link">с правилами пользования торговой площадкой</a> и <a href="/" class="section__subtext section__subtext_link">возврата</a></span>
+              <span class="section__subtext">Соглашаюсь <a href="#" class="section__subtext section__subtext_link">с правилами пользования торговой площадкой</a> и <a href="/" class="section__subtext section__subtext_link">возврата</a></span>
             </div>
           </div>
         </aside>
