feat: discount tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -490,18 +490,18 @@
             <h3 class="cart-items-list__price"></h3>
             <span class="cart-items-list__currency">сом</span>
           </div>
-          <div class="cart-items-list__old-price-with-currency">
+          <div class="cart-items-list__old-price-with-currency info-tooltip__text">
             <span class="section__subtext section__subtext_grey cart-items-list__old-price"></span>
             <span class="section__subtext section__subtext_grey">сом</span>
-          </div>
-          <div class="info-tooltip info-tooltip_discount">
-            <div class="info-tooltip__row">
-              <p class="section__subtext section__subtext_grey">Скидка 55%</p>
-              <p class="section__subtext">−300 сом</p>
-            </div>
-            <div class="info-tooltip__row">
-              <p class="section__subtext section__subtext_grey">Скидка покупателя 10%</p>
-              <p class="section__subtext">−30 сом</p>
+            <div class="info-tooltip info-tooltip_discount">
+              <div class="info-tooltip__row">
+                <p class="section__subtext section__subtext_grey">Скидка 55%</p>
+                <p class="section__subtext">−300 сом</p>
+              </div>
+              <div class="info-tooltip__row">
+                <p class="section__subtext section__subtext_grey">Скидка покупателя 10%</p>
+                <p class="section__subtext">−30 сом</p>
+              </div>
             </div>
           </div>
         </div>
