fix: checkbox styles

--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 <div class="cart-contents__select-all-checkbox-wrapper" id="selectAllCheckbox">
                   <div class="checkbox">
                     <input type="checkbox" class="checkbox__input" id="selectAllGoods">
-                    <span class="checkbox__span"></span>
+                    <span class="checkbox__checkmark"></span>
                   </div>
                   <label class="section__text" for="selectAllGoods">Выбрать все</label>
                 </div>
@@ -278,7 +278,7 @@
               <div class="order-summary__checkbox-wrapper">
                 <div class="checkbox">
                   <input type="checkbox" class="checkbox__input" id="immediate-payment">
-                  <span class="checkbox__span checkbox__span_order-summary"></span>
+                  <span class="checkbox__checkmark"></span>
                 </div>
                 <label for="immediate-payment" class="section__subtext">Списать оплату сразу</label>
               </div>
@@ -430,7 +430,7 @@
         <span class="item-size-badge item-size-badge_goods cart-items-list__size"></span>
         <div class="checkbox checkbox_position">
           <input class="checkbox__input cart-items-list__checkbox" type="checkbox" id="#">
-          <span class="checkbox__span"></span>
+          <span class="checkbox__checkmark checkbox__checkmark_list"></span>
         </div>
         <img class="cart-items-list__item-photo" src="#" alt="#" />
         <div class="cart-items-list__text-wrapper cart-items-list__text-wrapper_in-stock">
