--- a/src/index.html
+++ b/src/index.html
@@ -322,7 +322,7 @@
         <div class="popup__radio">
           <div class="radio-button">
             <input class="radio-button__input" type="radio" id="mir" name="credit-card" value="MIR">
-            <span class="radio-button__span"></span>
+            <span class="radio-button__checkmark"></span>
           </div>
           <div class="popup__card">
             <div class="credit-card-icon">
@@ -334,7 +334,7 @@
         <div class="popup__radio">
           <div class="radio-button">
             <input class="radio-button__input" type="radio" id="visa" name="credit-card" value="VISA">
-            <span class="radio-button__span"></span>
+            <span class="radio-button__checkmark"></span>
           </div>
           <div class="popup__card">
             <div class="credit-card-icon">
@@ -346,7 +346,7 @@
         <div class="popup__radio">
           <div class="radio-button">
             <input class="radio-button__input" type="radio" id="mastercard" name="credit-card" value="MasterCard">
-            <span class="radio-button__span"></span>
+            <span class="radio-button__checkmark"></span>
           </div>
           <div class="popup__card">
             <div class="credit-card-icon">
@@ -358,7 +358,7 @@
         <div class="popup__radio">
           <div class="radio-button">
             <input class="radio-button__input" type="radio" id="maestro" name="credit-card" value="Maestro">
-            <span class="radio-button__span"></span>
+            <span class="radio-button__checkmark"></span>
           </div>
           <div class="popup__card">
             <div class="credit-card-icon">
@@ -386,7 +386,7 @@
           <div class="popup__address-wrapper">
             <div class="radio-button">
               <input class="radio-button__input" type="radio" id="address1" name="addresses" value="address1">
-              <span class="radio-button__span"></span>
+              <span class="radio-button__checkmark"></span>
             </div>
             <label class="section__text" for="address1">Бишкек, улица Табышалиева, 57</label>
           </div>
@@ -396,7 +396,7 @@
           <div class="popup__address-wrapper">
             <div class="radio-button">
               <input class="radio-button__input" type="radio" id="address2" name="addresses" value="address2">
-              <span class="radio-button__span"></span>
+              <span class="radio-button__checkmark"></span>
             </div>
             <label class="section__text" for="address2">Бишкек, улица Жукеева-Пудовкина, 77/1</label>
           </div>
@@ -406,7 +406,7 @@
           <div class="popup__address-wrapper">
             <div class="radio-button">
               <input class="radio-button__input" type="radio" id="address3" name="addresses" value="address3">
-              <span class="radio-button__span"></span>
+              <span class="radio-button__checkmark"></span>
             </div>
             <label class="section__text" for="address3">Бишкек, микрорайон Джал, улица Ахунбаева Исы, 67/1</label>
           </div>
